welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new Array [N](14)
  T(0)=1
  for (j <- 1 to T.length -1){
    for (i <- 1 to j) {
      T(i)=i
    }
  }
  return T(num-1)
}